# mdbook-listings

./: .gitignore  .mutants.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  MUTATION_DEBT.md  README.md  ROADMAP.md  _typos.toml  deny.toml
.cargo/: audit.toml  config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  security.yml
assets/: mdbook-listings.css  mdbook-listings.js
book/: book.toml  listings.toml  mdbook-listings.css  template.typ
book/src/: SUMMARY.md  ch00-introduction.md  ch01-install-the-preprocessor.md  ch01-introduction.md  ch02-freeze-a-listing.md  ch02-install-the-preprocessor.md  ch03-freeze-a-listing.md  ch03-show-diffs-between-slices.md  ch04-render-inline-callouts.md  ch04-show-diffs-between-slices.md  ch05-render-inline-callouts.md  ch05-verify-sync.md  ch06-dogfooding-polish.md  ch07-future-work.md  ch07-verify-sync.md  ch08-recipes.md  ch09-future-work.md  changes-since-0.1.0.md  listings-index.md
book/src/listings/: callout-pdf-emit-snippet.rs  callout-v1.rs  callout-v10.rs  callout-v11.rs  callout-v2.rs  callout-v3.rs  callout-v4.rs  callout-v5.rs  callout-v6.rs  callout-v7.rs  callout-v8.rs  callout-v9.callouts.toml  callout-v9.rs  capture-screenshots-v1.rs  capture-screenshots-v2.rs  capture-screenshots-v3.rs  cargo-toml-v1.toml  cargo-toml-v2.toml  cargo-toml-v3.toml  cargo-toml-v4.toml  cargo-toml-v5.toml  cargo-toml-v6.toml  diff-line-ranges-v1.rs  diff-v10.rs  diff-v11.rs  diff-v2.rs  diff-v3.rs  diff-v4.rs  diff-v5.rs  diff-v6.rs  diff-v7.rs  diff-v8.rs  diff-v9.rs  diffs-tests-v1.rs  diffs-tests-v2.rs  diffs-tests-v3.rs  diffs-tests-v4.rs  diffs-tests-v5.rs  directive-v1.callouts.toml  directive-v1.rs  (+79 more)
book/src/snippets/: callout-align-snippet-v1.rs  callout-pdf-emit-snippet-v2.rs
scripts/: mutants.sh
skills/mdbook-listings/: SKILL.md
skills/mdbook-listings/references/: cli.md  directives.md
src/: callout.rs  diff.rs  directive.rs  fence.rs  freeze.rs  include.rs  install.rs  lib.rs  list_of_listings.rs  main.rs  manifest.rs  number.rs  verify.rs
supply-chain/: audits.toml  config.toml
tests/: cli.rs  e2e_callouts.rs  install.rs  integration.rs  list.rs  list_of_listings.rs  pdf_callouts.rs
tests/common/: e2e_harness.rs  mod.rs
tools/capture-screenshots/: Cargo.toml
tools/capture-screenshots/src/: main.rs
