[package]
name = "capture-screenshots"
version = "0.0.0"
edition = "2024"
publish = false
description = "Workspace tool: snapshot rendered chapter regions for ch. 4's slice-by-slice visual record"

[[bin]]
name = "capture-screenshots"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
playwright-rs = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
